--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,130 @@
-
 * {
   font-family: "Hanken Grotesk", serif;
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-size: 18px; */
+}
+.container{
+  height: 400px;
+  background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  color:hsl(241, 100%, 89%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.circle{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.circle :last-child{
+  color:hsla(241, 100%, 89%,0.6);
+}
+.container h1,
+.degree{
+  color: white;
+}
+.degree{
+  font-weight: 800;
+  font-size: 60px;
+}
+
+.container p{
+  width: 80%;
+  font-size: 18px;
+  text-align: center;
+}
+.container2{
+  height: 515px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.container2 h2{
+  align-self: flex-start;
+  padding-left: 40px;
+}
+.item{
+  width: 80%;
+  height: 50px;
+  padding: 0 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.item div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+img{
+  padding-right: 10px;
+}
+span{
+  padding-right: 10px;
+  font-weight: 700;
+}
+.reaction div:first-of-type{
+  color: hsl(0, 100%, 67%);
+
+}
+.reaction{
+  background-color: hsla(0, 100%, 67% , 0.05);
+}
+.memory div:first-of-type{
+  color: hsl(39, 100%, 56%);
+
+}
+.memory{
+  background-color: hsla(39, 100%, 56% , 0.05);
+}
+.verbal div:first-of-type{
+  color: hsl(166, 100%, 37%);
+
+}
+.verbal{
+  background-color: hsla(166, 100%, 37%, 0.05);
+}
+.visual div:first-of-type{
+  color: hsl(234, 85%, 45%);
+
+}
+.visual{
+  background-color: hsla(234, 85%, 45%, 0.05);
+}
+.btn{
+  display: flex;
+  justify-content: center;
+  font-weight: 800;
+  font-size: 20px;
+  background-color: hsl(224, 30%, 27%);
+  color: white;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+.btn:hover{
+  background-color: hsl(241, 81%, 54%);
 }
